# Lab3

./: CMakeLists.txt  README.md  que1.cpp  que2.cpp  que3.cpp  que4.cpp  que5.cpp  que6.cpp  que7.cpp
