cmake_minimum_required(VERSION 3.28)
project(Lab3)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab3
        main.cpp
)

add_executable(que1
        que1.cpp)

add_executable(que2
        que2.cpp)

add_executable(que3
        que3.cpp)

add_executable(que4
        que4.cpp)

add_executable(que5
        que5.cpp)

add_executable(que6
        que6.cpp)

add_executable(que7
        que7.cpp)
